[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/enemy_sigil.png" type="Texture" id=1]
[ext_resource path="res://EnemySpawner.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "spawn"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.3, 2.8, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpawningParticles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpawnedParticles:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2.8 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 2.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn"
} ]
}

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.278481, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.816456, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 1
emission_sphere_radius = 4.0
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 20.0
orbit_velocity = 0.1
orbit_velocity_random = 0.0
scale_curve = SubResource( 3 )

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.333333, 0.711111, 1 )
colors = PoolColorArray( 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.14557, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.791139, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 85.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 0.7
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 15.0
damping_random = 1.0
scale = 1.2
scale_random = 1.0
scale_curve = SubResource( 8 )
color_ramp = SubResource( 6 )

[node name="EnemySpawner" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
autostart = true

[node name="SpawnAnim" type="AnimationPlayer" parent="."]
anims/spawn = SubResource( 1 )

[node name="SpawningParticles" type="Particles2D" parent="."]
emitting = false
process_material = SubResource( 4 )

[node name="SpawnedParticles" type="Particles2D" parent="."]
emitting = false
amount = 16
one_shot = true
explosiveness = 1.0
process_material = SubResource( 9 )
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="animation_finished" from="SpawnAnim" to="." method="_on_SpawnAnim_animation_finished"]
